# Dev

./: .claude.json  .cursorignore  .editorconfig  .env  .flake8  .gitattributes  .gitconfig  .gitignore  .markdownlint.yml  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pylintrc  .spacedrive  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES-AND-AUTOMATIONS-PLAN.md  Fix-SystemPath-ADMIN.ps1  Generate-WorkspaceReport.ps1  Invoke-AllMcpTests.ps1  Invoke-DevMigration.Tests.ps1  Invoke-DevMigration.ps1  Invoke-McpHealthCheck.ps1  LICENSE  PSScriptAnalyzerSettings.psd1  README.md  Schedule-WorkspaceReport.ps1  TODO.md  Test-ConsolidationState.ps1  _fix-migrate.ps1  _grep-migrate.ps1  _lint-migrate.ps1  consolidate_workspace.ps1  copy-remaining.ps1  cursor.md  package.json  (+3 more)
.agent/: README.md  WORKSPACE_CONSOLIDATION_PLAN.md  config-setup-guide.md
.claude/: launch.json  settings.local.json
.claude-server-commander/: config.json  tool-history.jsonl
.cleanup_reports/: largest_files_20251120-191327.csv  top_level_sizes_20251120-191309.csv  top_level_sizes_20251120-191327.csv
.codeium/: installation_id
.cursor/: README-MCP.md  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  architect.chatmode.md  ask.chatmode.md  code.chatmode.md  codeql-config.yml  debug.chatmode.md  dependabot.yml
.windsurf/: argv.json
Better11/: .gitignore  BUILD.md  Better11-STATUS.md  Better11.Core.xml  Better11.Services.xml  Better11.ViewModels.xml  Better11.md  Better11.sln  Better11.xml  CLAUDE-CODE.md  CLAUDE.md  CONTRIBUTING.md  CURSOR.md  DevBetter11.WinMerge  LICENSE  NEW-FEATURES-PROPOSALS.md  PLAN.md  PROJECT-STATUS-SUMMARY.md  PowerShellServiceTests.cs  README.md  RELEASE-SUMMARY.md  RELEASE.md  STYLE-GUIDE.md  ServiceCollectionExtensions.cs  TEST-RESULTS-SUMMARY.md  TODO-LIST.md  TODO-PROGRESS.md  WS7-COMPLETION-REPORT.md  WS7-FINAL-STATUS.md  Win11ZTDeploy.txt  Windsurf.md  app_build_errors.txt  app_build_verbose.txt  build_errors.txt  build_errors2.txt  build_errors3.txt  build_errors4.txt  build_errors_v2.txt  build_errors_v3.txt  build_errors_v4.txt  (+7 more)
BetterMCP/unified-mcp-server/: README.md  pyproject.toml
BetterMCP/unified-mcp-server/src/server/: main.py
BetterMCP/unified-mcp-server/tests/unit/: test_server.py
Config/: ConnorOS-WinUtils.json  WinUtilsExport.json  grouped-kernel-power.reg  grouped-ui-explorer.reg  installer_metadata.json  profiles.json  project.json  schema.project.json  telemetry.json
Config/development/: Cargo.toml
Functions/: ConvertTo-HashtableSplat.ps1  Functions.psd1  Get-FileHashBatch.ps1  Get-SystemInfo.ps1  Test-AdminPrivilege.ps1  Write-Log.ps1
Optimizations/: Clear-WindowsCache.ps1  Disable-Telemetry.ps1  Optimize-NetworkSettings.ps1  Optimize-Services.ps1  Set-VisualPerformance.ps1
Registry/: Backup-Registry.ps1  Disable-Cortana.reg  Disable-LockScreen.reg  Restore-ContextMenu.reg  (+1 more)
docs/: CLAUDE.md  (+69 more)
(+2961 files in other folders)
