[package]
name = "better11"
version = "1.0.0-alpha"
description = "Better11 - System Enhancement Suite"
authors = ["Better11 Development Team"]
license = "MIT"
repository = "https://github.com/your-org/better11"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.0.0-beta", features = ["shell-open", "protocol-asset", "windows7-compat"] }
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Windows APIs
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WiFi",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming"
] }
winreg = "0.52"
wmi = "0.13"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
regex = "1.10"

# Compression/Archives
zip = "0.6"
flate2 = "1.0"
tar = "0.4"

# File Operations
walkdir = "2.4"
tempfile = "3.8"

# Process Management
which = "5.0"

# Hardware Monitoring
sysinfo = "0.30"

# PowerShell Integration
powershell_script = "1.1"

[features]
# Custom features
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
incremental = true
